# vvm-rs

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
src/: error.rs  lib.rs  platform.rs  releases.rs
src/vvm/: main.rs  print.rs
src/vyper/: cache.rs  error.rs  main.rs
test-data/: Token.vy  vvm-vyper-files-cache.json
vvm-builds/: Cargo.toml  build.rs
vvm-builds/src/: lib.rs
